<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.tenie</groupId>
	<artifactId>SQLucky</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>sqlucky</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>11</maven.compiler.release>
		<javafx.version>16</javafx.version>
	</properties>

	<organization>
		<name>https://github.com/tenie/SQLucky</name>
	</organization>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<!-- 控件库 -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>

		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.10.6</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>

		<!-- sql 格式化 -->
		<dependency>
			<groupId>com.github.vertical-blank</groupId>
			<artifactId>sql-formatter</artifactId>
			<version>2.0.0</version>
		</dependency>

		<!-- io 操作文件 -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>

		<!-- 数据库 JDBC -->
		<dependency>
			<groupId>com.ibm.db2.jcc</groupId>
			<artifactId>db2jcc4</artifactId>
			<version>10.1</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.35</version>
		</dependency>
		
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.197</version>
		</dependency> 
		
		
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.34.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.14.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.14.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.14.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${maven.compiler.release}</release>

					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>javafx.graphics/com.sun.javafx.application=SQLucky</arg>
						<arg>--add-exports</arg>
						<arg>org.controlsfx.controls/impl.org.controlsfx.tableview2.filter.parser=SQLucky</arg>
						<arg>--add-exports</arg>
						<arg>org.controlsfx.controls/impl.org.controlsfx.tableview2.filter.parser.aggregate=SQLucky</arg>
						<arg>--add-exports</arg>
						<arg>org.controlsfx.controls/impl.org.controlsfx.i18n=SQLucky</arg>
					</compilerArgs>

				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<release>${maven.compiler.release}</release>
					<jlinkImageName>SQLucky</jlinkImageName>
					<launcher>launcher</launcher>
					<mainClass>SQLucky/net.tenie.fx.main.MainMyDB</mainClass>
					<options>
						<option>--add-modules=javafx.controls,javafx.fxml</option>
						<option>--add-opens</option>
						<option>javafx.graphics/javafx.scene.text=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
						<option>--add-exports</option>
						<option>javafx.graphics/com.sun.javafx.application=SQLucky</option>
						<option>--add-opens</option>
						<option>java.base/java.lang=com.jfoenix</option>
						<option>--add-opens</option>
						<option>java.base/java.lang.reflect=com.jfoenix</option>
						<option>--add-opens</option>
						<option>java.base/java.lang=ALL-UNNAMED</option>
						<option>--add-opens</option>
						<option>javafx.controls/javafx.scene.control=SQLucky</option>
					</options>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
